# british-cycling-utils

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: python-package-uv.yml
src/british_cycling_utils/: __init__.py  bc_club_subscription.py  bc_person_record.py  club_subscription.py
tests/: test_bc_club_subscription.py  test_bc_person_record.py  test_club_subscription.py
